--- a/ _config.yml
+++ b/ _config.yml
@@ -1,3 +1,5 @@
 # add the following to _config.yml file
 title: Irene Luwabelwa
+logo: /assets/img/headshot_circle.png
+#description: text below image
 theme: jeykll-theme-minimal
