Update  _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@
 title: Irene Luwabelwa
 logo: /assets/img/headshot_circle.png
 #description: text below image
-theme: jeykll-theme-minimal
+#theme: jeykll-theme-minimal
